# tcod-ansi-terminal

./: .gitignore  LICENCE  README  README.md  pylintrc  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.github/workflows/: python-app.yml  test.yml
docs/: .gitignore  requirements.txt
docs/source/: compatibility.rst  conf.py  features.rst  index.rst  usage.rst
example/: __init__.py  __main__.py  _logging.py  _rendering.py  _sampling.py  _world.py
src/tcod_ansi_terminal/: __init__.py  _abstract_context.py  _ansi.py  _console_utils.py  _internal_context.py  _internal_event.py  _logging.py  _presenters.py  context.py  event.py
src/tcod_ansi_terminal/_platform/: __init__.py  _abstract_platform.py  _unix.py  _windows.py
src/tcod_terminal/: __init__.py
test/: test_import.py  type_check_contexts.py
test/type_check/: type_check_contexts.py  type_check_event.py  type_check_presenters.py
